--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/main.css">
     <title>очень хорошо</title>
+    <link  rel="icon" type="image/png" href="/img/favicon.png"/>
 </head>
 <body>
     <div class="parent-div">
