Removed extra div typo.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="parent-div">
         <div class="crt site-title">
-            <h1>Coming Soon</h1></div>
+            <h1>Coming Soon</h1>
             <h2>A Radau Original Production</h2>
         </div>
     </div>
