--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/main.css">
+    <script src="https://kit.fontawesome.com/6f79db0308.js" crossorigin="anonymous"></script>
     <title>очень хорошо</title>
     <link  rel="icon" type="image/png" href="/img/favicon.png"/>
 </head>
@@ -13,7 +14,19 @@
             <h4>A Radau Original Production</h4>
         </div>
     </div>
+
+
+
+    <div class="mail-div">
+        <div class="icon-div">
+            
+            <a href="mailto:webmaster@chistole.ch">
+                <i id='hover-effect' class="far fa-envelope fa-2x"></i>
+            </a>
+        </div>
+    </div>
 </body>
+
 </html>
 
 
