--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
         </div>
     </div>
 
-
-
     <div class="mail-div">
         <div class="icon-div">
-            
             <a href="mailto:webmaster@chistole.ch">
-                <i id='hover-effect' class="far fa-envelope fa-2x"></i>
+                <i class="far fa-envelope fa-2x"></i>
             </a>
         </div>
     </div>
