Changed mailto email address.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="mail-div">
             <div class="icon-div">
-                <a href="mailto:webmaster@chistole.ch">
+                <a href="mailto:spam@chistole.ch">
                     <i class="far fa-envelope fa-2x"></i>
                 </a>
             </div>
