--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/main.css">
-    <script src="https://kit.fontawesome.com/6f79db0308.js" crossorigin="anonymous"></script>
-    <title>очень хорошо</title>
-    <link  rel="icon" type="image/png" href="/img/favicon.png"/>
-</head>
-<body>
-    <div class="parent-div">
-        <div class="crt site-title">
-            <h1>Coming Soon</h1>
-            <h4>A Radau Original Production</h4>
-        </div>
 
-        <div class="mail-div">
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=3,maximum-scale=1"/>
+	<link rel="stylesheet" href="/main.css">
+	<script src="https://kit.fontawesome.com/6f79db0308.js" crossorigin="anonymous"></script>
+	<title>очень хорошо</title>
+	<link rel="icon" type="image/png" href="/img/favicon.png" /> </head>
+
+<body>
+	<div class="parent-div imgwrap">
+
+		<div class="monitor"> <img src="img/oldpc.png" alt="">
+			<div id="spam">
+				<div class="crt">
+					<div class="spam-title">
+						<h3>Coming Soon</h3>
+						<h5>A Radau Original Production <br><br><br><br> chistole.ch</h5> 
+                    </div>
+				</div>
+			</div>
+		</div>
             <div class="icon-div">
                 <a href="mailto:spam@chistole.ch">
                     <i class="far fa-envelope fa-2x"></i>
                 </a>
             </div>
-        </div>
-    </div>
+
+
+	</div>
 </body>
 
 </html>
-
-
-
