Minor refactoring for cleanliness

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=3,maximum-scale=1"/>
+	<title>очень хорошо</title>
+	<link rel="icon" type="image/png" href="/img/favicon.png" />
 	<link rel="stylesheet" href="/main.css">
 	<script src="https://kit.fontawesome.com/6f79db0308.js" crossorigin="anonymous"></script>
-	<title>очень хорошо</title>
-	<link rel="icon" type="image/png" href="/img/favicon.png" /> </head>
+</head>
 
 <body>
 	<div class="parent-div imgwrap">
