Added exclamation to test hosting change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="spam">
 				<div class="crt">
 					<div class="spam-title">
-						<h3>Coming Soon</h3>
+						<h3>Coming Soon!</h3>
 						<h5>A Radau Original Production <br><br><br><br> chistole.ch</h5> 
                     </div>
 				</div>
