Changed contact email

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 				<div class="crt">
 					<div class="spam-title">
 						<h3>Coming Soon!</h3>
-						<h5>A Radau Original Production <br><br><br><br> chistole.ch</h5> 
+						<h5>A Radau Original Production <br><br><br><br> radau@chistole.ch</h5> 
                     </div>
 				</div>
 			</div>
 		</div>
             <div class="icon-div">
-                <a href="mailto:spam@chistole.ch">
+                <a href="mailto:radau@chistole.ch">
                     <i class="far fa-envelope fa-2x"></i>
                 </a>
             </div>
